--- a/package.json
+++ b/package.json
@@ -2,7 +2,11 @@
   "private": true,
   "scripts": {
     "start": "brunch watch --server",
-    "build": "brunch build --production"
+    "build": "brunch build --production",
+    "stage": "surge ./public -d functional-crowd.surge.sh",
+    "prestage": "yarn build",
+    "deploy": "gh-pages -d public",
+    "predeploy": "yarn build"
   },
   "dependencies": {
     "@fortawesome/fontawesome": "^1.1.0",
@@ -12,6 +16,7 @@
     "auto-reload-brunch": "^2",
     "autoprefixer": "^7",
     "brunch": "^2",
+    "gh-pages": "^1.1.0",
     "postcss-brunch": "^2"
   }
 }
