--- a/package.json
+++ b/package.json
@@ -6,10 +6,15 @@
     "serve": "gatsby serve"
   },
   "dependencies": {
+    "@fortawesome/fontawesome": "^1.1.3",
+    "@fortawesome/fontawesome-pro-regular": "^5.0.6",
+    "@fortawesome/react-fontawesome": "^0.0.17",
     "gatsby": "^1.9.158",
     "gatsby-link": "^1.6.34",
     "gatsby-plugin-styled-components": "^2.0.5",
     "gatsby-plugin-typography": "^1.7.13",
+    "prop-types": "^15.6.0",
+    "react": "^16.2.0",
     "styled-components": "^3.1.6"
   }
 }
