--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "private": true,
   "scripts": {
-    "start": "gatsby develop",
+    "deploy": "gh-pages -d public",
     "build": "gatsby build",
-    "serve": "gatsby serve"
+    "predeploy": "yarn build",
+    "serve": "gatsby serve",
+    "start": "gatsby develop"
   },
   "dependencies": {
     "@fortawesome/fontawesome": "^1.1.3",
@@ -17,5 +19,8 @@
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "styled-components": "^3.1.6"
+  },
+  "devDependencies": {
+    "gh-pages": "^1.1.0"
   }
 }
