--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/react-fontawesome": "^0.0.17",
     "gatsby": "^1.9.158",
     "gatsby-link": "^1.6.34",
+    "gatsby-plugin-google-analytics": "^1.0.19",
     "gatsby-plugin-styled-components": "^2.0.5",
     "gatsby-plugin-typography": "^1.7.13",
     "prop-types": "^15.6.0",
