--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "gatsby-plugin-google-analytics": "^1.0.19",
     "gatsby-plugin-styled-components": "^2.0.5",
     "gatsby-plugin-typography": "^1.7.13",
+    "moment": "^2.20.1",
+    "moment-duration-format": "^2.2.2",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "styled-components": "^3.1.6"
